@@ -1,4 +1,5 @@
 import copy
+import logging
 from collections import OrderedDict, deque
 from itertools import chain
 
@@ -11,6 +12,9 @@ from zeep.xsd.elements import Any, AnyAttribute, AttributeGroup, Element
 from zeep.xsd.indicators import Group, OrderIndicator, Sequence
 from zeep.xsd.utils import NamePrefixGenerator
 from zeep.xsd.valueobjects import CompoundValue
+
+
+logger = logging.getLogger(__name__)
 
 
 class Type(object):
@@ -157,7 +161,11 @@ class SimpleType(Type):
                          context=None):
         if xmlelement.text is None:
             return
-        return self.pythonvalue(xmlelement.text)
+        try:
+            return self.pythonvalue(xmlelement.text)
+        except (TypeError, ValueError):
+            logger.exception("Error during xml -> python translation")
+            return None
 
     def pythonvalue(self, xmlvalue):
         raise NotImplementedError(
